<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.oum.myappprofolio.MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nanodegree_app"
            android:layout_gravity="center"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            android:textColor="@color/colorOrange800"
            android:layout_marginTop="@dimen/activity_vertical_margin_double"
            android:layout_marginBottom="@dimen/activity_vertical_margin_double" />

        <Button
            android:id="@+id/popular_movies"
            android:text="@string/popular_movies"
            android:background="@color/colorIndigo700"
            android:textColor="@color/white"
            android:layout_width="@dimen/button_max_length"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/stock_hawk"
            android:text="@string/stock_hawk"
            android:background="@color/colorBlue500"
            android:textColor="@color/white"
            android:layout_width="@dimen/button_max_length"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/build_it_bigger"
            android:text="@string/build_it_bigger"
            android:background="@color/colorTeal300"
            android:textColor="@color/white"
            android:layout_width="@dimen/button_max_length"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/material"
            android:text="@string/material"
            android:background="@color/colorDeepPurple200"
            android:textColor="@color/white"
            android:layout_width="@dimen/button_max_length"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/ubiquitous"
            android:text="@string/go_ubiquitous"
            android:background="@color/colorPurple300"
            android:textColor="@color/white"
            android:layout_width="@dimen/button_max_length"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/capstone"
            android:text="@string/capstone"
            android:background="@color/colorPink300"
            android:textColor="@color/white"
            android:layout_width="@dimen/button_max_length"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin" />


    </LinearLayout>
</ScrollView>

